--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    //noinspection GradleDependency
+    implementation 'com.google.android.material:material:1.0.0-rc01'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.12'
